Statistika radi, izvještaj
Maknuta labela f1 iz prijave

--- a/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/izvjestaj.rdlc
+++ b/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/izvjestaj.rdlc
@@ -685,43 +685,8 @@
           </Border>
         </Style>
       </Tablix>
-      <Textbox Name="Textbox110">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>=IIF(Fields!status.Value.Equals(0),"Stornirana narudžbenica!","")</Value>
-                <Style>
-                  <FontWeight>Bold</FontWeight>
-                  <Color>Red</Color>
-                </Style>
-              </TextRun>
-            </TextRuns>
-            <Style>
-              <TextAlign>Center</TextAlign>
-            </Style>
-          </Paragraph>
-        </Paragraphs>
-        <rd:DefaultName>Textbox110</rd:DefaultName>
-        <Top>3.65425cm</Top>
-        <Left>11.40588cm</Left>
-        <Height>0.6cm</Height>
-        <Width>4.72443cm</Width>
-        <ZIndex>1</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-          </Border>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
     </ReportItems>
-    <Height>2in</Height>
+    <Height>1.3125in</Height>
     <Style>
       <Border>
         <Style>Solid</Style>
@@ -1391,6 +1356,42 @@
             </Border>
           </Style>
         </Line>
+        <Textbox Name="Textbox110">
+          <CanGrow>true</CanGrow>
+          <KeepTogether>true</KeepTogether>
+          <Paragraphs>
+            <Paragraph>
+              <TextRuns>
+                <TextRun>
+                  <Value>=IIF(Fields!status.Value.Equals(0),"Narudžbenica stornirana!","")</Value>
+                  <Style>
+                    <FontSize>14pt</FontSize>
+                    <FontWeight>Bold</FontWeight>
+                    <Color>Red</Color>
+                  </Style>
+                </TextRun>
+              </TextRuns>
+              <Style>
+                <TextAlign>Center</TextAlign>
+              </Style>
+            </Paragraph>
+          </Paragraphs>
+          <rd:DefaultName>Textbox110</rd:DefaultName>
+          <Top>5.78709cm</Top>
+          <Left>11.40588cm</Left>
+          <Height>0.73229cm</Height>
+          <Width>4.72443cm</Width>
+          <ZIndex>22</ZIndex>
+          <Style>
+            <Border>
+              <Style>None</Style>
+            </Border>
+            <PaddingLeft>2pt</PaddingLeft>
+            <PaddingRight>2pt</PaddingRight>
+            <PaddingTop>2pt</PaddingTop>
+            <PaddingBottom>2pt</PaddingBottom>
+          </Style>
+        </Textbox>
       </ReportItems>
       <Style>
         <Border>
