--- a/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/izvjestaj.rdlc
+++ b/Aplikacija/ProdajaGreyMatter/ProdajaGreyMatter/izvjestaj.rdlc
@@ -801,7 +801,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>+385 (0)42 408 700 </Value>
+                  <Value>042 408 700 </Value>
                   <Style />
                 </TextRun>
               </TextRuns>
@@ -1105,7 +1105,7 @@
           <Top>5.77799cm</Top>
           <Left>3.5468cm</Left>
           <Height>0.6cm</Height>
-          <Width>2.5cm</Width>
+          <Width>3.47176cm</Width>
           <ZIndex>13</ZIndex>
           <Style>
             <Border>
@@ -1137,7 +1137,7 @@
           <Top>6.97799cm</Top>
           <Left>3.5468cm</Left>
           <Height>0.6cm</Height>
-          <Width>2.5cm</Width>
+          <Width>3.47176cm</Width>
           <ZIndex>14</ZIndex>
           <Style>
             <Border>
@@ -1169,7 +1169,7 @@
           <Top>7.57799cm</Top>
           <Left>3.5468cm</Left>
           <Height>0.6cm</Height>
-          <Width>2.5cm</Width>
+          <Width>3.47176cm</Width>
           <ZIndex>15</ZIndex>
           <Style>
             <Border>
@@ -1201,7 +1201,7 @@
           <Top>6.37799cm</Top>
           <Left>3.5468cm</Left>
           <Height>0.6cm</Height>
-          <Width>2.5cm</Width>
+          <Width>3.47176cm</Width>
           <ZIndex>16</ZIndex>
           <Style>
             <Border>
@@ -1261,9 +1261,9 @@
           </Paragraphs>
           <rd:DefaultName>datumIzdavanja</rd:DefaultName>
           <Top>8.17799cm</Top>
-          <Left>4.91227cm</Left>
+          <Left>4.94755cm</Left>
           <Height>0.6cm</Height>
-          <Width>3.39958cm</Width>
+          <Width>3.68276cm</Width>
           <ZIndex>18</ZIndex>
           <Style>
             <Border>
